# libicloud

./: CMakeLists.txt
src/: config.h.in  icloud.c  icloud.h
tests/: test_icloud.c
